spegett code just uploading so its on github look at battlebets it better